--- a/src/main/resources/assets/quantumstorage/lang/zh_CN.lang
+++ b/src/main/resources/assets/quantumstorage/lang/zh_CN.lang
@@ -15,16 +15,16 @@ tile.quantumstorage.trashcanfluid.name=流体回收桶
 
 item.quantumstorage.upgrade.render.name=渲染升级
 item.quantumstorage.crate.name=板条箱
-tooltipitem.quantumstorage.upgrade.render=Shift点击量子存储单元以允许特殊渲染效果
+tooltipitem.quantumstorage.upgrade.render=Shift=点击量子存储单元以允许特殊渲染效果
 
 item.quantumstorage.upgrade.void.name=虚空升级
-tooltipitem.quantumstorage.upgrade.void=Shift点击量子存储单元以允许清除特定物品
+tooltipitem.quantumstorage.upgrade.void=Shift=点击量子存储单元以允许清除特定物品
 
 item.quantumstorage.upgrade.creative.name=创造升级
-tooltipitem.quantumstorage.upgrade.creative=Shift点击量子存储单元以使已经存入的物品变为无限个
+tooltipitem.quantumstorage.upgrade.creative=Shift=点击量子存储单元以使已经存入的物品变为无限个
 
 item.quantumstorage.upgrade.water.name=无限水升级
-tooltipitem.quantumstorage.upgrade.water=Shift点击量子储罐以使储罐自动产生水
+tooltipitem.quantumstorage.upgrade.water=Shift=点击量子储罐以使储罐自动产生水
 
 item.quantumstorage.quantumstoragedisk.name=量子存储磁盘
 item.quantumstorage.quantumstoragediskfluid.name=量子流体磁盘
